<resources>
    <string name="app_name">ToDo-Route</string>
    <string name="todo">To Do</string>
    <string name="tasks">Tasks</string>
    <string name="settings">Settings</string>
    <string name="mode">Night Mode</string>
    <string name="language">Language</string>
    <string name="mode_text">Day</string>
    <string name="lang_text">English</string>
    <string name="task_details">Task details</string>
    <string name="save">Save Changes</string>
    <string name="edit_task">Edit Task</string>
    <string name="new_task">New Task</string>
    <string name="date">date</string>
    <string name="time">time</string>
    <string name="task_title">title</string>
    <string name="description">description</string>
    <string name="delete">Delete</string>
    <string name="all_tasks">All Tasks</string>
    <string name="add_new_task">add new task</string>
    <string name="save_new_task">Save new task</string>
    <string name="done">Done</string>
    <string name="lang_code">ar</string>
    <string name="lang_name">العربية</string>
    <string name="alt_mode_text">Night</string>
</resources>