<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color">

    <ImageView
        android:id="@+id/top_view_2"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:src="@color/main_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/settings"
        android:textColor="@color/title_color"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/lang"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lang"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="50dp"
        android:padding="8dp"
        android:text="@string/language"
        android:textColor="@color/text_color"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/top_view_2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lang_field"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:drawSelectorOnTop="true"

        app:boxStrokeColor="@color/main_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lang"
        app:layout_constraintWidth_percent="0.8"
        app:startIconDrawable="@drawable/ic_lang_layer"
        app:startIconTint="@color/text_color">

        <AutoCompleteTextView
            android:id="@+id/choose_lang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/nav_color"
            android:text="@string/lang_text"
            android:inputType="none"
            android:padding="8dp"
            android:paddingStart="50dp"
            android:textColor="@color/main_blue" />
    </com.google.android.material.textfield.TextInputLayout>
    <!----><!----><!----><!----><!----><!---->
    <!----><!----><!----><!----><!----><!---->
    <TextView
        android:id="@+id/mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="50dp"
        android:padding="8dp"
        android:text="@string/mode"
        android:textColor="@color/text_color"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lang_field" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mode_field"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:drawSelectorOnTop="true"
        app:boxStrokeColor="@color/main_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mode"
        app:layout_constraintWidth_percent="0.8"
        app:startIconDrawable="@drawable/ic_mode_layer"
        app:startIconTint="@color/text_color">

        <AutoCompleteTextView
            android:id="@+id/choose_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/nav_color"
            android:inputType="none"
            android:text="@string/mode_text"
            android:padding="8dp"
            android:paddingStart="50dp"
            android:textColor="@color/main_blue" />

    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>