<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.route.todo.fragments.addtask.AddTaskViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        style="@style/Widget.Design.BottomSheet.Modal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_rect">

        <View
            android:id="@+id/line_2"
            android:layout_width="0dp"
            android:layout_height="8dp"
            android:layout_margin="16dp"
            android:background="@drawable/blue_rect"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.5" />

        <TextView
            android:id="@+id/new_task"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/new_task"
            android:textColor="@color/text_color"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line_2" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enter_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/task_title"
            app:boxStrokeColor="@color/main_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/new_task">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name"
                error="@{vm.titleErrorLiveData}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/nav_color"
                android:inputType="text"
                android:maxLines="1"
                android:padding="22dp"
                android:text="@={vm.titleLiveData}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enter_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/description"
            app:boxStrokeColor="@color/main_blue"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enter_title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/nav_color"
                android:inputType="textMultiLine"
                android:maxLines="3"
                android:padding="22dp"
                android:text="@={vm.descriptionLiveData}" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enter_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/time"
            app:boxStrokeColor="@color/main_blue"
            app:layout_constraintEnd_toStartOf="@id/enter_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enter_description"
            app:layout_constraintWidth_percent="0.35">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/the_time"
                formatTime="@{vm.dateLiveData}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/nav_color"
                android:focusable="false"
                android:gravity="center"
                android:inputType="none"
                android:maxLines="1"
                android:padding="22dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/enter_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/date"
            app:boxStrokeColor="@color/main_blue"
            app:layout_constraintBottom_toBottomOf="@id/enter_time"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/enter_time"
            app:layout_constraintTop_toTopOf="@id/enter_time"
            app:layout_constraintWidth_percent="0.4">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/the_date"
                formatDate="@{vm.dateLiveData}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/nav_color"
                android:focusable="false"
                android:gravity="center"
                android:inputType="none"
                android:maxLines="1"
                android:padding="22dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:backgroundTint="@color/main_blue"
            android:contentDescription="@string/save_new_task"
            android:onClickListener="@{()->vm.addTask()}"
            android:src="@drawable/ic_check"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/enter_time" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>